<resources>
    <string name="app_name">Find&amp;Cook</string>
    <string name="title_activity_main_menu_acitivity">MainMenuAcitivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    //Strings used in login and register fragments
    <string name="sign_in">Log In</string>
    <string name="login_title">Find&amp;Cook something great! </string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="register_title">Register to enjoy the taste</string>
    <string name="email">E-mail </string>
    <string name="password">Password </string>
    <string name="repeat_password">Repeat password</string>
    <string name="login_fail_snack">Check email, password and try again</string>
    <string name="register_fail_snack">Check your data and try again</string>
    <string name="register_valid_data">Please fill valid data to register</string>
    <string name="login_valid_data">Please fill valid data to login</string>
    <string name="email_invalid">Email not valid</string>

    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="btn_add_favourites">Add to favourites</string>
    <string name="btn_add_forLater">Add to later list</string>
    <string name="recipe_image_description">Recipe image</string>
    <string name="popup_menu_addFav">Add to Favourites</string>
    <string name="popup_menu_addForLater">Add to ForLater list</string>
    <string name="recipe_remove">Recipe: %1$s, has been removed</string>
    <string name="recipe_addToFav">Recipe: %1$s, has been added to Favourites</string>
    <string name="recipe_addToForLater">Recipe: %1$s, has been added to ForLater list</string>


    <string name="recipe_category">Category: </string>
    <string name="recipe_complexity">Complexity: </string>
    <string name="recipe_ingredientsAmount">Ingredients amount:</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="recipe_steps">Steps</string>

    <string name="favourites">Favourites</string>
    <string name="home">Home</string>
    <string name="for_later">For Later</string>
    <string name="logged_user">Logged: </string>

    <string name="removal_tip">Hold recipe to remove from list</string>

w

</resources>