<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_foreground"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favourites_foreground"
            android:title="@string/favourites" />
        <item
            android:id="@+id/nav_forLater"
            android:icon="@drawable/ic_later_foreground"
            android:title="@string/for_later" />
    </group>
</menu>