<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/sign_up_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/register_title"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="#ffea00"/>

    <EditText
        android:id="@+id/register_email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="#9e9e9e"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/register_pass_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="#9e9e9e"
        android:textColorHint="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="70dp"
        android:background="#ffea00"
        android:backgroundTint="#ffea00"
        android:backgroundTintMode="add"
        android:text="@string/register"
        android:textColor="#424242"
        android:textSize="24sp" />
</LinearLayout>